--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<artifactId>resttemplate-front</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>TP5</name>
-	<description>Demo project for Spring Boot</description>
+	<name>resttemplate-front</name>
+	<description>Using RestTemplate class</description>
 	<properties>
 		<java.version>17</java.version>
 		<class>ma.formations.spring.rest.MainApplication</class>
